--- a/todo.txt
+++ b/todo.txt
@@ -5,5 +5,6 @@
 [ ] Smart Pointers
 [ ] Analyze/Optimize CellIntersectionGraph::CommonColors
 [ ] Remove SeparatorComponents::GetNeighborhood? Something smells funny
+[ ] LexTrieNode: pointer to parent node. Impacts Iterator. Iterator::Descend, Iterator::Ascend
 [x] EliminationOrder::EliminationFill -> chordalg::EliminationAlgorithms?
 [x] EliminationAlgorithm -> EliminationHeuristics
